<resources>
    <string name="app_name">Emoji Battery Status Bar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="battery_emoji_widget">Battery Emoji Widget</string>
    <string name="this_action_may_contain_ads">This action may contain Ads.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="getStarted">Get Started</string>
    <string name="select_language">Select Language</string>
    <string name="language">Language</string>
    <string name="intro_title_1">Unique Status Bar</string>
    <string name="intro_title_2">Easy Dynamic Island</string>
    <string name="welcome">Welcome!</string>
    <string name="intro_description_1">Emojis, widgets and animation\nto customize your screen</string>
    <string name="intro_description_2">Setup and display custom notch,\ngestures, styles and more</string>
    <string name="intro_description_3">Personalize your screens with unique battery emojis, widgets and animations</string>
    <string name="menu_customize">Customization</string>
    <string name="menu_dynamic_island">Dynamic Island</string>
    <string name="view_all"><u>See All</u></string>
    <string name="cat_emojis">Emojis</string>
    <string name="emoji">Emoji</string>
    <string name="cat_widgets">Widgets</string>
    <string name="cat_animations">Animations</string>
    <string name="view_all_battery_emoji">Battery Emoji</string>
    <string name="view_all_battery_widget">Battery Widget</string>
    <string name="view_all_battery_animation">Battery Animation</string>
    <string name="enable_battery_emoji">Enable Battery Emoji</string>
    <string name="enable_battery_anim">Enable Battery Animation</string>
    <string name="status_bar">Status Bar</string>
    <string name="statusbar_menu_details">Customize your\nemoji battery\nstatus bas</string>
    <string name="gesture">Gesture</string>
    <string name="gesture_menu_details">Setup customized\ngestures for\nyour device.</string>
    <string name="custom_status_bar">Custom Status Bar</string>
    <string name="customize_icon">Customize Icon</string>
    <string name="wifi">Wifi</string>
    <string name="data">Data</string>
    <string name="signals">Signals</string>
    <string name="airplane">Airplane</string>
    <string name="hotspot">Hotspot</string>
    <string name="time">Time</string>
    <string name="icon_colour">Icon Colour</string>
    <string name="vibrate_feedback">Vibrate Feedback</string>
    <string name="long_press">Long Press</string>
    <string name="swipe_left_to_right">Swipe left to right</string>
    <string name="back_action">Back Action</string>
    <string name="single_tap">Single-tap</string>
    <string name="swipe_right_to_left">Swipe right to left</string>
    <string name="action_quick_scroll_to_up">Quick Scroll to up</string>
    <string name="action_open_notifications">Open Notifications</string>
    <string name="action_open_control_centre">Open Control Centre</string>
    <string name="action_power_options">Power Options</string>
    <string name="action_do_nothing">Do Nothing</string>
    <string name="action_back_action">Back Action</string>
    <string name="action_home_action">Home Action</string>
    <string name="action_recent_action">Recent Action</string>
    <string name="action_take_screenshot">Take Screenshot</string>
    <string name="action_lock_screen">Lock Screen</string>
    <string name="edit">Edit</string>
    <string name="show_battery_percentage">Show battery percentage</string>
    <string name="percentage_size">Percentage Size</string>
    <string name="percentage_colour">Percentage Colour</string>
    <string name="apply">Apply</string>
    <string name="applied_successfully">Applied successfully!</string>
    <string name="the_changes_have_been_saved_successfully">The changes have been saved successfully</string>
    <string name="customize">Customize</string>
    <string name="setting">Settings</string>
    <string name="get_premium">Get Premium</string>
    <string name="dark_mode">Dark mode</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="lock_screen_not_supported_on_your_device">Lock screen not supported on your device.</string>
    <string name="take_screenshot_not_supported_on_your_device">Take screenshot not supported on your device.</string>
    <string name="widget_design_preview">Take screenshot not supported on your device.</string>
    <string name="please_turn_on_battery_percentage">Please Turn On Battery Percentage</string>
    <string name="please_enable_battery_emoji_service">Please enable Custom Status Bar.</string>
    <string name="cancel">Cancel</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="please_enable_accessibility_service">Please enable accessibility service</string>
    <string name="please_accept_terms_of_service">Please accept Terms of Service</string>
    <string name="allow">Allow</string>
    <string name="animation_applied_successfully">Animation Applied Successfully.</string>
    <string name="widget_applied_successfully">Widget Applied Successfully.</string>
    <string name="emoji_applied_successfully">Emoji Applied Successfully.</string>
    <string name="all">All</string>
    <string name="cat_1">Popular</string>
    <string name="cat_2">Cartoon</string>
    <string name="cat_3">Comic</string>
    <string name="cat_4">Hot</string>
    <string name="cat_5">New</string>
    <string name="cat_6">Funky</string>
    <string name="gesture_action">Gesture Action</string>
    <string name="terms_of_service_url" translatable="false">https://sites.google.com/view/theswiftvision-termsofservice/home</string>
    <string name="privacy_policy_url" translatable="false">https://sites.google.com/view/theswiftvision-privacypolicy/home</string>
    <string name="restore_sub_url" translatable="false">https://play.google.com/store/account/subscriptions</string>
    <string name="loading_ad">Loading Ad…</string>
    <string name="height_12_dp"> Height : 12 dp</string>
    <string name="left_margin_16_dp">Left Margin : 16 dp</string>
    <string name="right_margin_30_dp">Right Margin : 30 dp</string>
    <string name="size_dp">%1$s Size : %2$d dp</string>
    <string name="right_margin_dp">Right Margin : %1$d dp</string>
    <string name="left_margin_dp">Left Margin : %1$d dp</string>
    <string name="height_dp">Height : %1$d dp</string>
    <string name="battery_emoji_12_dp">Battery emoji : 12 dp</string>
    <string name="percentage_size_16_dp">Percentage size : 16 dp</string>
    <string name="action_applied">Action Applied - %1$s</string>
    <string name="ad" translatable="false">Ad</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="remove_adds">Remove ads</string>
    <string name="faster_processing">Faster processing</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="high_resolution">High-Resolution</string>
    <string name="no_watermark">No Watermark</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="and">and</string>
    <string name="subscription_note">Subscription is billed and will auto-renew. You can cancel your subscription anytime to avoid charges.</string>
    <string name="restore_purchase">Restore\nPurchase</string>
    <string name="restore_subscription">Restore Subscription</string>
    <string name="subscription_not_available">Subscription not available</string>
    <string name="please_select_a_plan">Please select a plan</string>
    <string name="google_play">Google Play</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="notification_mesg">Stay updated with latest battery animations and updates by enabling notifications.</string>
    <string name="why_we_need_notification_access">Why We Need Notification Access</string>
    <string name="notification_mesg_2">We use notifications to alert you of new battery animations and updates. Please allow it from app settings if you want to stay informed.</string>
    <string name="open_settings">Open Settings</string>
    <string name="later">Later</string>
    <string name="restore_successfully">Restore successfully.</string>
    <string name="please_enable_gesture_mode">Please enable gesture</string>
    <string name="please_enable_animation">Please enable battery animation.</string>
    <string name="percentage_color">Percentage Color</string>
    <string name="enable_battery_widget">Enable Widget Service</string>
    <string name="widget_limit_reached">Widget limit reached up to 10 please delete older widget from home screen.</string>
    <string name="accessibility_service_description">This application needs this service to inject the clicks you have created into the other applications once the conditions have been detected.\10\10No data will be collected from this application.</string>
    <string name="accessibility_desc">This app needs to be activated in Accessibility Service to show Emoji Battery Widget view on bottom of mobile screen and start several \10 Accessibility actions: action to Home, Back, show Recent Screen. No personal data is collected or shared.</string>
    <string name="accessibility_service">Accessibility Service</string>
    <string name="accessibility_service_usage">Accessibility Service Usage</string>
    <string name="previous">Previous</string>
    <string name="how_to_use">How to use</string>
    <string name="got_it">Got it!</string>
    <string name="text_accessibility_1">1. Select “Installed Apps” or “Downloaded Apps” in Accessibility Setting</string>
    <string name="text_accessibility_2">2. Select <b>“Emoji Battery Status Bar”</b></string>
    <string name="text_accessibility_3">3. Turn On</string>
    <string name="txt_title_use_2">Question: Why does the Application need Accessibility Service?</string>
    <string name="txt_title_use_3">Gestures that the application supports</string>
    <string name="txt_des_use_2">This app need to be activated in Accessibility Service to show custom status bar view on top of phone screen &amp; start several Accessibility actions: Action to Home, Back, show Recent Screen. This application do not collect or share any user data.</string>
    <string name="txt_des_use_3">Take screenshot, Quick scroll to top, Open Control center, Open Notification, Back home, Recent action, Power options, Lock screen.</string>
    <string name="dot_point" translatable="false">●</string>
    <string name="accessibility_permission">Accessibility Service Usage</string>
    <string name="service_note_1"><b>Please agree the term of service :</b>\nThis app required the Accessibility Services permission for,</string>
    <string name="service_note_3">I have read and agree terms of services</string>
    <string name="agree">Agree</string>
    <string name="not_now">Not Now</string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="service_title_1">Why this feature is needed:</string>
    <string name="service_title_1_1">To show the <b>“Emoji Battery Status Bar”</b> \n  view on top of the screen.</string>
    <string name="service_title_1_2">To allow gesture detection on the status bar (e.g., swipe, tap).</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="allow_notification_access_so_we_can_show_notifications_in_your_custom_notch">Allow notification access so we can show notifications in your custom notch.</string>
</resources>