<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.SettingsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titlebarEditEmoji"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/ibBackButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_left"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/edit"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibNextButton"
            app:layout_constraintStart_toEndOf="@+id/ibBackButton"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/ibNextButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>