<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_other_screen"
    tools:context=".activity.HowToUseActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titlebarHowToUse"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/ibBackButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:padding="18dp"
            android:src="@drawable/ic_arrow_left"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/edit"
            android:gravity="center"
            android:text="@string/how_to_use"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibNextButton"
            app:layout_constraintStart_toEndOf="@+id/ibBackButton"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/ibNextButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/titlebarHowToUse"
        app:layout_constraintBottom_toTopOf="@+id/btnPrev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dotsIndicator"
        android:layout_width="0dp"
        android:layout_height="14dp"
        app:dotsColor="@color/gray_unselected"
        app:dotsSize="12dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPrev"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toEndOf="@+id/btnPrev"
        app:layout_constraintTop_toTopOf="@+id/btnPrev"
        app:selectedDotColor="@color/blue_app_color" />

    <TextView
        android:id="@+id/btnPrev"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/previous"
        android:textColor="@color/gray_unselected"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/blue_app_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>