<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_home_screen"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageSlide3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/how_to_use"
        android:src="@drawable/ic_gasture"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25" />
    <TextView
        android:id="@+id/textTitleSlide2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_title_use_3"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSlide3"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textDescSlide3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_des_use_3"
        android:textStyle="normal"
        android:gravity="start"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleSlide2"
        app:layout_constraintWidth_percent="0.8" />




</androidx.constraintlayout.widget.ConstraintLayout>